--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>361</width>
-    <height>192</height>
+    <width>350</width>
+    <height>350</height>
    </rect>
   </property>
   <property name="maximumSize">
    <size>
-    <width>361</width>
-    <height>192</height>
+    <width>350</width>
+    <height>350</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -41,68 +41,11 @@
      </widget>
     </item>
     <item>
-     <widget class="QGroupBox" name="gbTimeRange">
-      <property name="title">
-       <string>Time Range</string>
-      </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <item>
-        <widget class="QComboBox" name="cbFromMonth"/>
-       </item>
-       <item>
-        <widget class="QComboBox" name="cbFromYear"/>
-       </item>
-       <item>
-        <spacer name="hsFromDate">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>0</width>
-           <height>0</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="QLabel" name="lblTimeRange">
-         <property name="font">
-          <font>
-           <weight>75</weight>
-           <bold>true</bold>
-          </font>
-         </property>
-         <property name="text">
-          <string> - </string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="hsToDate">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>0</width>
-           <height>0</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="QComboBox" name="cbToMonth"/>
-       </item>
-       <item>
-        <widget class="QComboBox" name="cbToYear"/>
-       </item>
-      </layout>
-     </widget>
-    </item>
-    <item>
      <layout class="QHBoxLayout" name="hlStartStealing">
       <property name="topMargin">
+       <number>9</number>
+      </property>
+      <property name="bottomMargin">
        <number>9</number>
       </property>
       <item>
@@ -126,6 +69,9 @@
        </widget>
       </item>
      </layout>
+    </item>
+    <item>
+     <widget class="QTableView" name="tvCalculation"/>
     </item>
    </layout>
   </widget>
