--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -53,6 +53,26 @@
        <number>9</number>
       </property>
       <item>
+       <widget class="QLabel" name="lblAvLeagScore">
+        <property name="text">
+         <string>Average League Score</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QSpinBox" name="sbAvLeagScore">
+        <property name="minimum">
+         <number>95</number>
+        </property>
+        <property name="maximum">
+         <number>110</number>
+        </property>
+        <property name="value">
+         <number>100</number>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="hsStartStealing">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
