--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -34,7 +34,7 @@
     <item>
      <widget class="QGroupBox" name="gbOutputDB">
       <property name="title">
-       <string>Output Database</string>
+       <string>Output File</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
